--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -5,9 +5,9 @@
   box-sizing: border-box;
 }
 
-html,
+
 body {
-  background-color: #fff;
+  background-color: #fac5d8;
   color: #202124;
   font-size: 15px;
   margin: 0;
@@ -33,7 +33,8 @@ main {
   height: 120px;
   margin: 20px;
   width: 120px;
-  opacity: 0.1;
+  color:#f252a7;
+  opacity:0.5;
 }
 
 #placeholder-text {
@@ -52,17 +53,18 @@ main {
   margin: 32px auto 16px auto;
   max-width: 496px;
   transition-duration: 0.218s;
-  transition-property: background, border, opacity, box-shadow, transform;
+  transition-property: border;
   transition-timing-function: ease-in;
 }
 
 #form {
+  background-color: white;
   position: relative;
   border: none;
   margin: 1px;
   border-radius: 8px;
   transition-duration: 0.218s;
-  transition-property: background, border, opacity, box-shadow, transform;
+  transition-property:border;
   transition-timing-function: ease-in;
 }
 
@@ -196,6 +198,7 @@ input:focus {
   color:gray;
   border: 2px solid rgba(128, 128, 128, 0.517) !important;
   cursor: pointer;
+  margin-right:5px;
 }
 
 #submit-button {
@@ -224,7 +227,7 @@ input:focus {
   position: relative;
   border-radius: 8px;
   transition-duration: 0.218s;
-  transition-property: background, border, opacity, box-shadow, transform;
+  transition-property: border;
   transition-timing-function: ease-in;
 }
 
@@ -241,7 +244,7 @@ input:focus {
   line-height: 1.5rem;
   min-height: 38px;
   padding: 16px 16px 0 16px;
-  transition: background-color 0.218s ease-in;
+  transition: 0.218s ease-in;
   box-sizing: border-box;
   font-variant-ligatures: none;
   outline: none;
@@ -273,7 +276,7 @@ input:focus {
   line-height: 26px;
   margin: 4px 0;
   position: relative;
-  transition: opacity 0.218s ease-in-out, background-color 0.218s ease-in-out,
+  transition: opacity 0.218s ease-in-out, 0.218s ease-in-out,
     box-shadow 0.218s ease-in-out;
 }
 
@@ -294,34 +297,6 @@ input:focus {
 
 .toolbar-color-modal {
   display: none;
-}
-
-#color-tooltip {
-  border-bottom: 2px solid #fff;
-  position: absolute;
-  top: -40;
-  background: #fff;
-  border: 1px solid black;
-  left: 0;
-  z-index: 20;
-  border-radius: 5px;
-  display: none;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  padding: 5px 7px 3px;
-  width: 136px;
-  height: 40px;
-  justify-content: space-between;
-}
-
-.color-option {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  border: 1px solid #dedede;
-}
-
-.color-option:hover {
-  border: 1px solid black;
 }
 
 .modal {
@@ -382,22 +357,3 @@ input:focus {
   transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
-#white {
-  background: white;
-}
-
-#purple {
-  background: #d7aefb;
-}
-
-#orange {
-  background: #fbbc04;
-}
-
-#teal {
-  background: #a7ffeb;
-}
-
-#pink{
-  background:#ffafcc ;
-}
